--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <img src="img/1649555270193.jfif" alt="">
             </div>
             <div class="about-text">
-                <p>Hi i am Albert Remalin WEB Developer, I am 20 year old  </p>
+                <p>Welcome I am Albert Remalin Raja Web Developer, I am 20 year old  </p>
                 <div class="information">
                     <!-- Box 1 -->
                     <div class="info-box">
