--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         </div>
         <div class=" row portfolio-content">
             <div class="col-md-4 portfolio-img">
-                <a href="https://albe68.github.io/Minecraft-Static/" target="_blank"><img src="img/ASUS.jpg" alt="" class="im"></a>
+                <a href="https://albe68.github.io/ASUS/#" target="_blank"><img src="img/ASUS.jpg" alt="" class="im"></a>
             </div>
             <div class="col-md-4 portfolio-img">
                 <a href="https://albe68.github.io/Minecraft-Static/" target="_blank"> <img src="img/Minecraft.jpg" alt=""></a>
