--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <span>Hello, I'm</span>
             <h1>Albert Remalin Raja</h1>
             <h2>Web Developer</h2>
-            <p>Web Designer, Web Developer,  FULL STACK Developer</p>
+            <p>Web Designer, Web Developer, Full Stack Developer</p>
             <a href="tel:9947360389" class="btn">Contact Me</a>  
         </div>
  
@@ -61,7 +61,7 @@
                 <img src="img/1649555270193.jfif" alt="">
             </div>
             <div class="about-text">
-                <p>Welcome I am Albert Remalin Raja Web Developer, I am 20 year old  </p>
+                <p>Welcome I am Albert Remalin Raja Web Developer, I am 21 year old  </p>
                 <div class="information">
                     <!-- Box 1 -->
                     <div class="info-box">
