--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <h1>Albert Remalin Raja</h1>
             <h2>Web Developer</h2>
             <p>Web Designer, Web Developer, Full Stack Developer</p>
-            <a href="tel:9947360389" class="btn">Contact Me</a>  
+            <a href="https://wa.me/qr/W7PJBBZXZI6LG1" target="_blank" class="btn">Contact Me</a>  
         </div>
  
     </section>
